fixed font for banner on mobile

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -4,7 +4,6 @@
 
 .banner__content {
   padding: 10px;
-  /* max-width: 800px; */
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -26,8 +25,7 @@
 
 @media only screen and (max-device-width:768px) {
   .bug-bounty-mobile {
-    font-size: large !important;
-    /* max-width: 400px; */
+    font-size: medium !important;
     display: flex;
     flex-direction: column;
   }
@@ -37,7 +35,6 @@
 @media only screen and (min-device-width:768px) {
   .bug-bounty-desktop {
     font-size: larger !important;
-    /* max-width: 800px; */
   }
 }
 
